TER : BUILD.GRADLE
-Correction pour garder le workflow dev classique (clean → build → run via application), tout en utilisant JavaFX externe (sans jlink ni modules obligatoires), produire un FatJar, un .cmd pour Windows et un EXE installable via jpackage avec le vendor / développeur correct ("Rafaros-IT")